Refactoring #3.